--- a/src/Sidebar.css
+++ b/src/Sidebar.css
@@ -51,3 +51,9 @@
   margin-right: 2vw;
   font-size: 24px !important;
 }
+
+.sidebar__chats{
+    flex: 1;
+    background-color: white;
+    overflow: scroll;
+}
