--- a/src/Chat.css
+++ b/src/Chat.css
@@ -1,16 +1,63 @@
-.chat{
-    flex: 0.65px;
+.chat {
+  flex: 0.65px;
+  display: flex;
+  flex-direction: column;
 }
 
-.chat__header{
-    padding: 20px;
-    display: flex;
-    align-items: center;
-    border: 1px solid lightgray;
+.chat__header {
+  padding: 20px;
+  display: flex;
+  align-items: center;
+  border: 1px solid lightgray;
 }
 
+.chat__headerInfo {
+  flex: 1px;
+  padding-left: 20px;
+}
 
-.chat__headerInfo{
-    flex: 1px;
-    padding-left: 20px;
+.chat__headerInfo > h3 {
+  margin-bottom: 3px;
+  font-weight: 500;
+}
+
+.chat__headerInfo > p {
+  color: gray;
+}
+
+.chat__message {
+  position: relative;
+  font-size: 16px;
+  padding: 10px;
+  border-radius: 10px;
+  background-color: white;
+  width: fit-content;
+  margin-bottom: 30px;
+}
+
+.chat__headerRight {
+  display: flex;
+  justify-content: space-between;
+  min-width: 100px;
+}
+
+.chat__body {
+  flex: 1;
+  background-image: url("https://i.pinimg.com/564x/8c/98/99/8c98994518b575bfd8c949e91d20548b.jpg");
+  background-repeat: repeat;
+  background-position: center;
+  padding: 30px;
+  overflow: scroll;
+}
+
+.chat__name {
+  position: absolute;
+  top: -15px;
+  font-weight: 800;
+  font-size: xx-small;
+}
+
+.chat__timestamp {
+  margin-left: 10px;
+  font-size: xx-small;
 }
