--- a/src/Chat.css
+++ b/src/Chat.css
@@ -61,3 +61,44 @@
   margin-left: 10px;
   font-size: xx-small;
 }
+
+
+.chat__receiver{
+    margin-left: auto;
+    background-color: #dcf8c6;
+}
+
+
+
+.chat__footer{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    height: 62px;
+    border-top: 1px solid lightgray;
+
+}
+
+.chat__footer > form{
+    flex: 1;
+    display: flex;
+}
+
+
+.chat__footer > form > input{
+    flex: 1px;
+    border-radius: 30px;
+    padding: 10px;
+    border: none;
+
+}
+
+
+.chat__footer > form > button{
+    display: none;
+}
+
+.chat__footer > .MuiSvgIcon-root{
+    padding: 10px;
+    color: gray;
+}
